<resources>
    <string name="app_name">note</string>
    <string name="by_n_249software">By\n 249Software</string>
    <string name="create_notes_about_any_things_save_it_and_edit_later">Create notes about any things, save it and edit later</string>
    <string name="notes_app">Notes App</string>
    <string name="title">Title...</string>
    <string name="subtitle">SubTitle...</string>
    <string name="notes">Notes</string>
    <string name="priority">Priority</string>
</resources>